--- a/src/app/templates/find_ml_models.html
+++ b/src/app/templates/find_ml_models.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="https://www.gta.ufrj.br/" class="logo"><strong>Grupo de Teleinformática e Automação</a>
+									<a href="index.html" class="logo"><strong>Grupo de Teleinformática e Automação</a>
 									</ul>
 								</header>
 
@@ -148,7 +148,7 @@
 										<li><a href="/">Homepage</a></li>
 										<li><a href="/about">About</a></li>
 <li><a href="/datasets">Datasets</a></li>
-                                        <li><a href="files/client.py" download>Download Client Code</a></li>                                        										<li><a href="models/grafo.pdf" download>Download Test Model</a></li>
+                                        <li><a href="models/grafo.pdf" download>Download Client Code</a></li>                                        										<li><a href="models/grafo.pdf" download>Download Test Model</a></li>
 
 										<li><a href="/ml_models">Machine Learning Models</a></li>
 						<li><a href="/upload">Upload Trained Test Model</a></li>
